syntax = "proto3";

package proto;

import "github.com/relab/gorums/gorums.proto";

option go_package = "github.com/relab/hotstuff/gorumshotstuff/internal/proto";

service Hotstuff {
	rpc Propose(HSNode) returns (PartialCert) {
		option (gorums.qc) = true;
		option (gorums.ordered) = true;
		option (gorums.qf_with_req) = true;
		option (gorums.custom_return_type) = "QuorumCert";
	}
	rpc NewView(QuorumCert) returns (Empty) {
		option (gorums.ordered) = true;
	}
}

message HSNode {
	bytes ParentHash = 1;
	QuorumCert QC = 2;
	int64 Height = 3;
	repeated Command Commands = 4;
}

message PartialSig {
	int32 ReplicaID = 1;
	bytes R = 2;
	bytes S = 3;
}

message PartialCert {
	PartialSig Sig = 1;
	bytes Hash = 2;
}

message QuorumCert {
	repeated PartialSig Sigs = 1;
	bytes Hash = 2;
}

message Command {
	bytes Data = 1;
}

message Empty {}
